2006-06-21  Adam Jocksch  <ajocksch@redhat.com>

	* cni/Elf.cxx (elf_getehdr): No longer uses JvMalloc, now passes in
	the address of the local variable.
	(elf_getphdr): Ditto.
	* cni/ElfSection.cxx (elf_getshdr): Ditto.

2006-06-20  Adam Jocksch  <ajocksch@redhat.com>

	* ElfEHeader32.java: Removed.
	* ElfEHeader64.java: Removed.
	* ElfPHeader32.java: Removed.
	* ElfPHeader64.java: Removed.
	* ElfSectionHeader32.java: Removed.
	* ElfSectionHeader64.java: Removed.

	* Elf.java (Elf): No longer takes 32bit boolean.
	(elf_getehdr): Now returns a ElfEHeader.
	(getEHeader): refactored to reflect above change.
	(elf_newehdr): Now returns an int.
	(createNewEHeader): Refactored to reflect above change.
	(getPHeaders): Removed.
	(getPHeader): Added.
	(elf_newphdr): Now returns an int.
	(createNewPHeader): Refactored to reflect above change.
	(elf_getarhdr): Now returns an ElfArchiveHeader.
	(getArchiveHeader): Refactored to reflect above changes.
	* ElfArchiveHeader.java (getName): replaced with public variable.
	(getDate): Ditto.
	(getUid): Ditto.
	(getGid): Ditto.
	(getMode): Ditto.
	(getSize): Ditto.
	(getRawName): Ditto.
	(getPointer): Removed.
	(elf_ar_get_name): Ditto.
	(elf_ar_get_date): Ditto.
	(elf_ar_get_uid): Ditto.
	(elf_ar_get_gid): Ditto.
	(elf_ar_get_mode): Ditto.
	(elf_ar_get_size): Ditto.
	(elf_ar_get_raw_name): Ditto.
	* ElfData.java (ElfData): No longer takes a 32 bit boolean flag.
	* ElfEHeader.java (getPointer): Removed.
	(getFileClass): Removed, replaced with public variable.
	(getDataEncoding): Ditto.
	(getFileVersion): Ditto.
	(getType): Ditto.
	(getArchitechture): Ditto.
	(getVersion): Ditto.
	(getEntryPoint): Ditto.
	(getProgramHeaderOffset): Ditto.
	(getSectionHeaderOffset): Ditto.
	(getFlags): Ditto.
	(getELFHeaderSize): Ditto.
	(getProgramHeaderEntrySize): Ditto.
	(getProgramHeaderEntryCount): Ditto.
	(getSectionHeaderEntryCount): Ditto.
	(getSectionHeaderStringTableIndex): Ditto.
	(get_e_fileclass): Removed.
	(get_e_dataencoding): Ditto.