@@ -1,3 +1,8 @@
+2006-06-23  Adam jocksch  <ajocksch@redhat.com>
+
+	* tests/TestElf.cxx (testCore): Now uses Build.ABS_BUILDDIR.
+	(testObjectFile): Ditto. 
+
 2006-06-21  Adam Jocksch  <ajocksch@redhat.com>
 
 	* cni/Elf.cxx (elf_getehdr): No longer uses JvMalloc, now passes in
